# ofsaa_automation

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE_CONCISE.md  DEPLOY.md  ENHANCEMENTS.md  FICHOME_DEPLOYMENT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_FLOW.md  OFSAA Application Installation Steps 2 (1) 3 1.docx  OFSAAI_InstallConfig.xml  OFSAAI_InstallConfig.xml_BEFORE  OFSAA_INSTALL_FLOW.md  OFSAA_Installation_Guide.md  OFS_BD_PACK.xml  OFS_BD_PACK.xml_BEFORE  OFS_BD_SCHEMA_IN.xml  OFS_BD_SCHEMA_IN.xml_BEFORE  OFS_ECM_SCHEMA_IN.xml  OFS_ECM_SCHEMA_IN.xml_BEFORE  QUICK_REFERENCE.md  README.md  SANC_INSTALLATION_GUIDE.md  STEPS_QUICK_REF.md  WEBLOGIC_WLST_PLAN.md  default.properties  default.properties_BEFORE  ecosystem.config.js  index.html  ofsaainstall.txt  profile_changed.txt  start-pm2.bat  start-pm2.sh  working.md  ~$SAA Application Installation Steps 2 (1) 3 1.docx
backend/: .env.example  AFTER_JAVA_INSTALLATION_FLOW.md  BACKUP_RESTORE_AUTOMATION_PLAN.md  BD_PACK_WORKFLOW.md  README.md  main.py  pyproject.toml  requirements.txt  restore_metadata.sql  start.bat
backend/core/: __init__.py  config.py  dependencies.py  logging.py  prompt_helpers.py  task_manager.py  task_state_store.py  websocket_manager.py
backend/pytest/: test_backup_manifest.py  test_backup_restore_governor.py  test_installation_api.py  test_installation_recovery.py  test_installer_datafile_dir.py  test_main.py  test_task_manager.py  test_task_state_store.py
backend/routers/: __init__.py  datasource.py  deployment.py  ecm.py  installation.py
backend/schemas/: __init__.py  datasource.py  installation.py
backend/services/: __init__.py  backup.py  backup_manifest.py  backup_restore_governor.py  (+18 more)
(+29 files in other folders)
