[project]
name = "ofsaa-installation-backend"
version = "1.0.0"
description = "FastAPI backend for Oracle Financial Services installation automation"
authors = [
    { name = "OFSAA Team", email = "team@example.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "paramiko>=3.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"