[project]
name = "ofsaa-installation-backend"
version = "1.0.0"
description = "FastAPI backend for Oracle Financial Services installation automation"
authors = [
    { name = "OFSAA Team", email = "team@example.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "paramiko>=3.4.0",
    "python-dotenv>=1.0.1",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "anyio>=4.5.0",
    "pydantic-settings>=2.5.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "routers", "schemas", "services"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]